log
Sun 19 May 2024 03:22:01 AM UTC: 
 tests:  0|5
total_score: 0/70
ca1690d
Sun 19 May 2024 03:25:40 AM UTC: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|5
total_score: 0/70
d963b2e
Sun 19 May 2024 03:27:35 AM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:22: error: unused variable ‘adj’ [-Werror=unused-variable]
   60 |                Node* adj=copy(n);
      |                      ^~~
cc1: all warnings being treated as errors
Compilation failed
355bf01
Sun 19 May 2024 03:28:07 AM UTC: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|4
total_score: 15/70
23c043e
Sun 19 May 2024 03:29:01 AM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  3|3
total_score: 25/70
e3e2d71
Sun 19 May 2024 03:30:21 AM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  4|3
total_score: 30/70
ae83dfe
Sun 19 May 2024 03:35:20 AM UTC: 
 sudoku.c | 30 +++++++++++++++++++++++++++++-
 1 file changed, 29 insertions(+), 1 deletion(-)
 tests:  0|0
c020fff
